# game-of-life

./: .gitignore  CMakeLists.txt  tags
include/: .ltimer.h.swo  .ltimer.h.swp  life.h  ltimer.h
src/: .main.cpp.swp  life.cpp  ltimer.cpp  main.cpp
